--- a/qr_script.service
+++ b/qr_script.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 ExecStartPre=/bin/sleep 2
 RestartSec=10
-ExecStart=/home/pi/myvirtualenv/bin/python3 /home/pi/fitnessmanager/fitnessmanager_api/turnstile_controller/qr.py
-User=pi
+ExecStart=/home/pi/venv/bin/python3 /home/manager/turnstile_controller/qr.py
+User=manager
 Restart=always
 #ExecStopPost=/usr/bin/python3 /home/pi/restart_msg.py  # This will run when the service is stopped/restarted
 #StandardOutput=append:/home/pi/scan.log
