Add a comment explaining the systemctl daemon-reload command in the makefile.

--- a/download_customer_db.service
+++ b/download_customer_db.service
@@ -4,8 +4,8 @@ Description=Download Customer Database Service
 [Service]
 Type=simple
 ExecStart=/home/pi/myvirtualenv/bin/python3 /home/pi/fitnessmanager/fitnessmanager_api/turnstile_controller/download_customer_db.py
-User=pi
-WorkingDirectory=/home/pi
+User=manager
+WorkingDirectory=/home/manager
 StandardOutput=journal
 StandardError=journal
 Restart=on-failure
