Update WorkingDirectory path in download_customer_db.service to /home/

--- a/download_customer_db.service
+++ b/download_customer_db.service
@@ -5,7 +5,7 @@ Description=Download Customer Database Service
 Type=simple
 ExecStart=/home/pi/myvirtualenv/bin/python3 /home/pi/fitnessmanager/fitnessmanager_api/turnstile_controller/download_customer_db.py
 User=manager
-WorkingDirectory=/home/manager
+WorkingDirectory=/home/
 StandardOutput=journal
 StandardError=journal
 Restart=on-failure
