--- a/qr_script.service
+++ b/qr_script.service
@@ -3,6 +3,7 @@ Description=My qr.py script
 After=network.target
 
 [Service]
+TimeoutStopSec=3s
 RestartSec=10
 ExecStart=/home/manager/turnstile_controller/venv/bin/python3 /home/manager/turnstile_controller/qr_multi_controller.py
 User=manager
