--- a/qr_script.service
+++ b/qr_script.service
@@ -3,7 +3,8 @@ Description=My qr.py script
 After=network.target
 
 [Service]
-TimeoutStopSec=3
+KillMode=process
+TimeoutStopSec=1
 RestartSec=0
 Restart=always
 ExecStart=/home/manager/turnstile_controller/venv/bin/python3 /home/manager/turnstile_controller/qr_multi_controller.py
